--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, li, ul, ol, button, input, 
 /* Font fallback and consistency */
 @font-face {
     font-family: 'Sailec';
-    src: url('../fonts/SailecRegular.otf') format('opentype');
+    src: url('fonts/SailecRegular.otf') format('opentype');
     font-weight: 400;
     font-style: normal;
     font-display: swap;
@@ -34,7 +34,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, li, ul, ol, button, input, 
 
 @font-face {
     font-family: 'Sailec';
-    src: url('../fonts/SailecRegular.otf') format('opentype');
+    src: url('fonts/SailecRegular.otf') format('opentype');
     font-weight: 500;
     font-style: normal;
     font-display: swap;
@@ -42,7 +42,7 @@ html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, li, ul, ol, button, input, 
 
 @font-face {
     font-family: 'Sailec';
-    src: url('../fonts/SailecRegular.otf') format('opentype');
+    src: url('fonts/SailecRegular.otf') format('opentype');
     font-weight: 700;
     font-style: normal;
     font-display: swap;
